--- a/match/base.yml
+++ b/match/base.yml
@@ -1,20 +1,19 @@
 matches:
   - trigger: ":date"
-    replace: "{{mydate}}"
+    replace: "{{date}}"
     vars:
-      - name: mydate
-        type: date
-        params:
-          format: "%m/%d/%Y"
-
-  - trigger: ":time"
-    replace: "{{mytime}}"
-    vars:
-      - name: mytime
+      - name: date
         type: date
         params:
           format: "%m/%d/%Y %H:%M:%S"
 
+  - trigger: ":timestamp"
+    replace: "{{timestamp}}"
+    vars:
+      - name: timestamp
+        type: date
+        params:
+          format: "%s"
   # Print the output of a shell command
   # - trigger: ":shell"
   #   replace: "{{output}}"
