--- a/match/base.yml
+++ b/match/base.yml
@@ -14,12 +14,21 @@ matches:
         type: date
         params:
           format: "%s"
-  # Print the output of a shell command
-  # - trigger: ":shell"
-  #   replace: "{{output}}"
-  #   vars:
-  #     - name: output
-  #       type: shell
-  #       params:
-  #         cmd: "echo 'Hello from your shell'"
-  # And much more! For more information, visit the docs: https://espanso.org/docs/
+
+  - trigger: ":doge"
+    replace: "[旺柴]"
+
+  - trigger: ":smile"
+    replace: "[奸笑]"
+
+  - trigger: ":hide"
+    replace: "[捂脸]"
+
+  - trigger: ":gua"
+    replace: "[吃瓜]"
+
+  - trigger: ":666"
+    replace: "[666]"
+
+  - trigger: ":ok"
+    replace: "[好的]"
